<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item android:id="@+id/action_add"
        android:icon="@drawable/action_add_white"
        android:title="@string/action_add"
        app:showAsAction="ifRoom" />

    <item android:id="@+id/action_delete"
        android:icon="@drawable/action_delete_white"
        android:title="@string/action_delete"
        app:showAsAction="ifRoom" />

    <item android:id="@+id/action_refresh_home"
        android:icon="@drawable/action_refresh_white"
        android:title="@string/action_refresh"
        app:showAsAction="ifRoom" />

    <item android:id="@+id/action_about_us_home"
        android:icon="@drawable/action_about_us_white"
        android:title="@string/action_about_us"
        app:showAsAction="never" />

</menu>