<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/lightgrey"
    android:gravity="center"
    android:paddingBottom="8dp"
    android:paddingLeft="8dp"
    android:paddingRight="8dp"
    android:paddingTop="8dp"
    tools:context="com.example.aswin.testgraph.Home">






    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:text="@string/textview_for_edittext"
        android:layout_weight="2"
        style="@style/textview_style"
        />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/et_home_url"
        android:layout_weight="1"
        style="@style/edittext_style"
        android:inputType="textUri"
        />

    <Button
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:text="@string/button_for_opration"
        android:id="@+id/b_home_begin"
        android:layout_weight="2"
        style="@style/button_style"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:text="@string/textview_for_listview"
        android:layout_weight="2"
        style="@style/textview_style"
        />

    <ListView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:id="@+id/lv_home"
        android:layout_weight="10"
        />
</LinearLayout>
